Changelog
=========

0.1 (xxxx-xx-xx)
----------------

* zgeo.plone.geographer code refactoring 
* moved from zgeo.plone.geographer