@@ -9,7 +9,7 @@ its functionalities in collective.geo project.
 Requirements
 ------------
 
-* zgeo.geographer >= 0.3
+* Plone >= 4
 
 How it work
 -----------
@@ -27,7 +27,7 @@ Add geo-referenced content
 
     >>> oid = self.folder.invokeFactory('Document', 'doc')
     >>> doc = self.folder[oid]
-    >>> from zgeo.geographer.interfaces import IWriteGeoreferenced
+    >>> from collective.geo.geographer.interfaces import IWriteGeoreferenced
     >>> geo = IWriteGeoreferenced(doc)
     >>> geo.setGeoInterface('Point', (-100, 40))
 
@@ -44,10 +44,9 @@ Conflicts
 
 There's a conflict with an event registration from Plone4ArtistsVideo
 (p4a.plonevideo, specifically).  A method from P4A Video gets called
-to try and update a 'ObjectGeoreferencedEvent' from zgeo.geographer
-when one tries to assign coordinates to a file marked with the p4a
-video subtype.  A monkey patch in this package works around the issue
-at present.
+to try and update a 'ObjectGeoreferencedEvent' when one tries to assign 
+coordinates to a file marked with the p4a video subtype.
+A monkey patch in this package works around the issue at present.
 
 Contributors
 ============
